# tflite2torch

./: .gitignore  ARCHITECTURE_CHANGES.md  IMPLEMENTATION_SUMMARY.md  OPERATOR_SUPPORT.md  README.md  pyproject.toml  test_export_functionality.py
.github/workflows/: test.yml
examples/: basic_conversion.py  birdnet.py  test.py  yamnet.py
examples/pt_model/: activation_11.pt  activation_14.pt  activation_17.pt  activation_2.pt  activation_20.pt  activation_23.pt  activation_26.pt  activation_29.pt  activation_32.pt  activation_35.pt  activation_38.pt  activation_41.pt  activation_5.pt  activation_8.pt  module.py  module_43.pt
plans/: tflite_ops.md
tests/: __init__.py  test_all_operators_integration.py  test_converter.py  test_fully_connected.py  test_integration.py  test_operator_converter.py  test_parser.py  test_parser_options.py
tests/operators/: categories.txt
tflite2torch/: __init__.py  _code_renderer.py  _converter.py  _fx_reconstructor.py  _operator_converter.py  _parser.py  converter.py  fx_reconstructor.py  operator_converter.py  parser.py
tflite2torch/ops/: __init__.py  _impl.py
