[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tflite2torch"
version = "0.1.0"
description = "Convert TFLite models to PyTorch models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Justin Chu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "torch>=2.7.0",
    "numpy>=1.20.0",
    "tensorflow>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/justinchuby/tflite2torch"
Repository = "https://github.com/justinchuby/tflite2torch"

[tool.pytest.ini_options]
addopts = "--tb=short --color=yes"

[tool.setuptools.packages.find]
where = ["."]
include = ["tflite2torch*"]

[tool.ruff]
line-length = 100
target-version = "py39"
